--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="author"
+      content="Ambar P. Gonzalez"
+    />
+    <meta
       name="description"
       content="Web site created using create-react-app"
     />
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ambar In Dev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
