--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,6 @@
 <script
   src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
-
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
